# chatgpt-wrapper

./: README.md
scripts/: install-linux.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
