[package]
name = "chatgpt-desktop"
version = "0.1.2"
description = "ChatGPT Desktop"
authors = ["Ignacio Perez <ignacio@feuer.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chatgpt_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.3"
serde_json = "1"
open = "5"
url = "2"
tauri-plugin-notification = "2.3.3"
image = "0.25"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
